resonate v4 blocked up, swapping out previous

--- a/aartics/projects/resonateai_v4/index.htm
+++ b/aartics/projects/resonateai_v4/index.htm
@@ -123,7 +123,7 @@
 	
 	<div class="container-fluid itemblock" id="problem-1">
 	  <div class="row">
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
 			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
 			<h1 class="itemblock-itemtitle">toward an m.v.p</h1>
@@ -135,7 +135,7 @@
 			</ul>
 			<p class="itemblock-material"><a href="local_img/interview_with_client_resonate_aartics.pdf">CLICK FOR PDF OF INTERVIEW</a></p>
 		</div>
-		<div class="col-sm-8 itemblock-image-div">
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Excerpts from interview with Dhaval Bhatt, CEO of Resonate.ai:</p>
 				<img class="itemblock-image-img" src="local_img/resonate_interview.png"/>
@@ -145,36 +145,36 @@
 	</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-8 itemblock-image-div" id="existing-product-div">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
+			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
+			<h1 class="itemblock-itemtitle">existing product usability testing</h1>
+			<p class="itemblock-paragraph">Usability testing on existing product led us to remove non measurable tones like "joy", "anticipation", and "popularity" from the existing product classifiers. We summarized the outcomes:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">T.L.C: Identify and Infuse only Trust, Likability and Confidence for persuasion in inline content</li>
+				<li class="itemblock-list-li">USE DATA MINING ON FULL CONTENT ARC: Identify structural elements in overall content</li>
+				<li class="itemblock-list-li">ENABLE BRAND CUSTOMIZATION IN CONTENT: Train the algorithm to identify and infuse brand personalization in inline content</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Screenshot of existing product:</p>
 				<img class="itemblock-image-img" id="resonate_before_img" src="local_img/res_before_01.png"/>
 			</div>
 		</div>
-		<div class="col-sm-4 itemblock-textholder">
-		<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
-		<p class="itemblock-sectiontitle-problem">problem synthesis</p>
-		<h1 class="itemblock-itemtitle">existing product usability testing</h1>
-		<p class="itemblock-paragraph">Usability testing on existing product led us to remove non measurable tones like "joy", "anticipation", and "popularity" from the existing product classifiers. We summarized the outcomes:</p>
-		<ul class="itemblock-list-ul">
-			<li class="itemblock-list-li">T.L.C: Identify and Infuse only Trust, Likability and Confidence for persuasion in inline content</li>
-			<li class="itemblock-list-li">USE DATA MINING ON FULL CONTENT ARC: Identify structural elements in overall content</li>
-			<li class="itemblock-list-li">ENABLE BRAND CUSTOMIZATION IN CONTENT: Train the algorithm to identify and infuse brand personalization in inline content</li>
-		</ul>
-		<p class="itemblock-material">&nbsp;</p>
-		</div>
 	  </div>
 	</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
 			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
 			<h1 class="itemblock-itemtitle">product strategy</h1>
 			<p class="itemblock-paragraph">We presented a product vision and strategy based on what the layers are of telling an effective story</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
-		<div class="col-sm-8 itemblock-image-div">
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Product vision strategy:</p>
 				<img class="itemblock-image-img" id="product-vision-img" src="local_img/res_structural_change.png"/>
@@ -184,7 +184,14 @@
 	</div>
 		<div class="container-fluid itemblock">
 		  <div class="row">
-			<div class="col-sm-8 itemblock-image-div">
+			<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder" id="solution-1">
+				<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
+				<p class="itemblock-sectiontitle-solution">solution discovery</p>
+				<h1 class="itemblock-itemtitle">product mockup video</h1>
+				<p class="itemblock-paragraph">As part of the final delivery, we made a video of the mockup of the product vision for resonate.ai for financial marketers</p>
+				<p class="itemblock-material">&nbsp;</p>
+			</div>
+			<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 				<div class="row itemblock-image-title-div">
 					<p class="itemblock-image-title">Video of product mockup:</p>
 					  <video class="itemblock-image-img" autoplay controls loop>
@@ -192,25 +199,18 @@
 					  </video>
 				</div>
 			</div>
-			<div class="col-sm-4 itemblock-textholder" id="solution-1">
-				<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-				<p class="itemblock-sectiontitle-solution">solution discovery</p>
-				<h1 class="itemblock-itemtitle">product mockup video</h1>
-				<p class="itemblock-paragraph">As part of the final delivery, we made a video of the mockup of the product vision for resonate.ai for financial marketers</p>
-				<p class="itemblock-material">&nbsp;</p>
-			</div>
 		  </div>
 		</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
 			<p class="itemblock-sectiontitle-solution">solution discovery</p>
 			<h1 class="itemblock-itemtitle">paper prototypes</h1>
 			<p class="itemblock-paragraph">We started with interactive paper prototypes to mimic product features which was used to identify and prioritize necessary features. It also led to further research on identifying classifiers.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
-		<div class="col-sm-8 itemblock-image-div">
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Photograph of paper prototype:</p>
 				<img class="itemblock-image-img" id="product-vision-img" src="local_img/resonate_paper_prototype.png"/>
@@ -220,24 +220,58 @@
 	</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-8 itemblock-image-div" id="existing-product-div">
-			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Screenshots of slides from rapid prototyping presentation:</p>
-				<img class="itemblock-image-img" src="local_img/res_more_prototyping.png"/>
-			</div>
-		</div>
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
 			<p class="itemblock-sectiontitle-solution">solution discovery</p>
 			<h1 class="itemblock-itemtitle">rapid slides prototypes</h1>
 			<p class="itemblock-paragraph">We reiterated designs through low-fidelity clickable slides-based rapid prototypes for different personas to gather feedback and effectively communicate functional design details to the client.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Screenshots of slides from rapid prototyping presentation:</p>
+				<img class="itemblock-image-img" src="local_img/res_more_prototyping.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
+			<p class="itemblock-sectiontitle-solution">solution discovery</p>
+			<h1 class="itemblock-itemtitle">visual mockup of web application</h1>
+			<p class="itemblock-paragraph">We make mockups</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Mockup of web application with score detail:</p>
+				<img class="itemblock-image-img" src="local_img/visual_mockup.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
+			<p class="itemblock-sectiontitle-solution">solution discovery</p>
+			<h1 class="itemblock-itemtitle">mockup for email plugin</h1>
+			<p class="itemblock-paragraph">We made more mockups</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div" id="existing-product-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Mockup of inline email-based tone editor:</p>
+				<img class="itemblock-image-img" src="local_img/mail_plugin.png"/>
+			</div>
+		</div>
 	  </div>
 	</div>
 	<div class="container-fluid itemblock" id="process-1">
 	  <div class="row">
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
 			<h1 class="itemblock-itemtitle">competitive and comparitive analysis</h1>
@@ -250,7 +284,7 @@
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
-		<div class="col-sm-8 itemblock-image-div">
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Learning from existing products:</p>
 				<img class="itemblock-image-img" src="local_img/comp_analysis.png"/>
@@ -260,13 +294,7 @@
 	</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-8 itemblock-image-div">
-			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
-				<img class="itemblock-image-img" src="local_img/personas.png"/>
-			</div>
-		</div>
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
 			<h1 class="itemblock-itemtitle">personas</h1>
@@ -279,11 +307,17 @@
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<img class="itemblock-image-img" src="local_img/personas.png"/>
+			</div>
+		</div>
 	  </div>
 	</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
 			<h1 class="itemblock-itemtitle">feature and user flow map</h1>
@@ -295,7 +329,7 @@
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
-		<div class="col-sm-8 itemblock-image-div">
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Detailed User and Structural Flow Map:</p>
 				<img class="itemblock-image-img" src="local_img/userflowmap.png"/>
@@ -305,13 +339,7 @@
 	</div>
 	<div class="container-fluid itemblock">
 	  <div class="row">
-		<div class="col-sm-8 itemblock-image-div">
-			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Product Roadmap:</p>
-				<img class="itemblock-image-img" src="local_img/productroadmap.png"/>
-			</div>
-		</div>
-		<div class="col-sm-4 itemblock-textholder">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
 			<h1 class="itemblock-itemtitle">product roadmap</h1>
@@ -323,6 +351,12 @@
 				<li class="itemblock-list-li">PHASE 4: Enterprise Application allowing role based privileges and collaboration</li>
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Product Roadmap:</p>
+				<img class="itemblock-image-img" src="local_img/productroadmap.png"/>
+			</div>
 		</div>
 	  </div>
 	</div>
