aartics page improvements begin

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -60,8 +60,9 @@
     </ul>
     </header>
     <div class="child3" id="about">
-        <h1>hello world, i'm aarti...</h1>
-        <p>I'm a UX Designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
+        <img id="intro-logo" src="aartics_icon_v4.png"/>
+        <h1 id="intro-title">hello world, i'm aarti...</h1>
+        <p id="intro-para">I'm a designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
         <div class="logowrapper">
           <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
           <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
