commit before adding scroll animation

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -60,7 +60,7 @@
     </ul>
     </header>
     <div class="child3" id="about">
-        <img id="intro-logo" src="aartics_icon_v4.png"/>
+        <img id="intro-logo" src="aartics_icon_v4_gray.png"/>
         <h1 id="intro-title">hello world, i'm aarti...</h1>
         <p id="intro-para">I'm a designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
         <div class="logowrapper">
@@ -69,6 +69,7 @@
           <a href="mailto:aartics@gmail.com" class="logoc"><img src="img/mail.png"/></a>
           <a href="https://github.com/aartics" class="logoc"><img src="img/github.png"/></a>
         </div>
+        <img id="test1" src="img/test1-01.png"/>
     </div>
     <div class="horizon parent">
       <div class="child1">
