home arrow animation added

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -62,14 +62,32 @@
     <div class="child3" id="about">
         <img id="intro-logo" src="aartics_icon_v4_gray.png"/>
         <h1 id="intro-title">hello world, i'm aarti...</h1>
-        <p id="intro-para">I'm a designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
+        <p id="intro-para">I'm a designer and an engineer. 
+        <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
         <div class="logowrapper">
           <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
           <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
           <a href="mailto:aartics@gmail.com" class="logoc"><img src="img/mail.png"/></a>
           <a href="https://github.com/aartics" class="logoc"><img src="img/github.png"/></a>
         </div>
-        <img id="test1" src="img/test1-01.png"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="1000" height="760" viewBox="0 0 1000 760" id="test1">
+          <title>landingsvg-02</title>
+          <g id="Layer_3" data-name="Layer 3">
+            <polygon id="bzz05" class="home-1 bzz05 hideshowhome delayhome" points="697.77 88.3 799.95 242 877 380 799.95 520 697.77 674.23 866.56 380 697.77 88.3"/>
+            <polygon id="bzz04" class="home-2 bzz04 hideshowhome delayhome" points="631.16 88.3 765 242 847 380 767 520 631.16 674.23 799.95 380 631.16 88.3"/>
+            <polygon id="bzz03" class="home-3 bzz03 hideshowhome delayhome" points="510.19 88.3 710 242 788 380 709 520 510.19 674.23 678.98 380 510.19 88.3"/>
+            <polygon id="bzz02" class="home-4 bzz02 hideshowhome delayhome" points="408.09 88.3 663 242 743 380 659 520 408.09 674.23 576.88 380 408.09 88.3"/>
+            <polygon id="bzz01" class="home-5 bzz01 hideshowhome" points="285.31 88.3 606 242 685 380 605 520 285.31 674.23 454.09 380 285.31 88.3"/>
+          </g>
+          <g id="Layer_2" data-name="Layer 2">
+            <polyline id="bzz01-2" data-name="bzz01" class="home-6 bzz01 hideshowhome delayhome" points="285.31 88.3 454.09 380 285.31 674.23"/>
+            <polyline id="bzz02-2" data-name="bzz02 hideshowhome delayhome" class="home-6 bzz02 hideshowhome delayhome" points="408.09 88.3 576.88 380 408.09 674.23"/>
+            <polyline id="bzz03-2" data-name="bzz03 hideshowhome delayhome" class="home-6 bzz03 hideshowhome delayhome" points="509.86 88.3 678.64 380 509.86 674.23"/>
+            <polyline id="bzz04-2" data-name="bzz04 hideshowhome delayhome" class="home-6 bzz04 hideshowhome delayhome" points="631.16 88.3 799.95 380 631.16 674.23"/>
+            <polyline id="bzz05-2" data-name="bzz05 hideshowhome delayhome" class="home-6 bzz05 hideshowhome delayhome" points="697.77 88.3 866.56 380 697.77 674.23"/>
+            <polyline id="bzz06" class="home-6 hideshowhome bzz06" points="749.12 88.3 917.91 380 749.12 674.23"/>
+          </g>
+        </svg>
     </div>
     <div class="horizon parent">
       <div class="child1">
@@ -397,7 +415,7 @@
       <text x="3000" y="600" data-x-rel="-420" class="creds">&copy; copyright aartics 2017</a></text>
   </g>                 
         </svg>
-      </div>
+<!--       </div>
         <div class="child2">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="760px" viewBox="0 0 1200 760" id="halo">
             <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
@@ -418,7 +436,7 @@
               </linearGradient>              
             </defs>
           </svg>
-      </div>
+      </div> -->
     </div>
 	<script src="js/data.js"></script>
   <script src="js/app.js"></script>
