--- a/aartics/projects/karunavr_v4/index.htm
+++ b/aartics/projects/karunavr_v4/index.htm
@@ -3,21 +3,27 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>aartics - resonate.ai</title>
+	<title>aartics - karuna.vr</title>
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:800" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../aartics_projects_v4.css"/>
+    <link rel="stylesheet" href="../assets_v4/css/aartics_projects_v4.css"/>
+    <link rel="stylesheet" href="css/resonate_v4.css"/>
     <link rel="icon" 
       type="image/png" 
       href="../../favico.png">
+    <script src="../assets_v4/js/aartics_projects_js.js"></script>
 </head>
 <body>
     <header>
+    <div class="aarticslogo">
+    	<a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
+    </div>
       <ul id="ul_top_hypers">
         <li class="a_top_hypers dropdown">
             <button class="dropbtn" id="area2">UX Designer</button>
