aartics page improvements

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -60,34 +60,36 @@
     </ul>
     </header>
     <div class="child3" id="about">
-        <img id="intro-logo" src="aartics_icon_v4_gray.png"/>
-        <h1 id="intro-title">hello world, i'm aarti...</h1>
-        <p id="intro-para">I'm a designer and an engineer. 
-        <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
-        <div class="logowrapper">
-          <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
-          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
-          <a href="mailto:aartics@gmail.com" class="logoc"><img src="img/mail.png"/></a>
-          <a href="https://github.com/aartics" class="logoc"><img src="img/github.png"/></a>
-        </div>
         <svg xmlns="http://www.w3.org/2000/svg" width="1000" height="760" viewBox="0 0 1000 760" id="test1">
           <title>landingsvg-02</title>
-          <g id="Layer_3" data-name="Layer 3">
+          <g id="homearrow" data-name="Layer 3">
             <polygon id="bzz05" class="home-1 bzz05 hideshowhome delayhome" points="697.77 88.3 799.95 242 877 380 799.95 520 697.77 674.23 866.56 380 697.77 88.3"/>
             <polygon id="bzz04" class="home-2 bzz04 hideshowhome delayhome" points="631.16 88.3 765 242 847 380 767 520 631.16 674.23 799.95 380 631.16 88.3"/>
             <polygon id="bzz03" class="home-3 bzz03 hideshowhome delayhome" points="510.19 88.3 710 242 788 380 709 520 510.19 674.23 678.98 380 510.19 88.3"/>
             <polygon id="bzz02" class="home-4 bzz02 hideshowhome delayhome" points="408.09 88.3 663 242 743 380 659 520 408.09 674.23 576.88 380 408.09 88.3"/>
             <polygon id="bzz01" class="home-5 bzz01 hideshowhome" points="285.31 88.3 606 242 685 380 605 520 285.31 674.23 454.09 380 285.31 88.3"/>
           </g>
-          <g id="Layer_2" data-name="Layer 2">
+<!--           <g id="Layer_2" data-name="Layer 2">
             <polyline id="bzz01-2" data-name="bzz01" class="home-6 bzz01 hideshowhome delayhome" points="285.31 88.3 454.09 380 285.31 674.23"/>
             <polyline id="bzz02-2" data-name="bzz02 hideshowhome delayhome" class="home-6 bzz02 hideshowhome delayhome" points="408.09 88.3 576.88 380 408.09 674.23"/>
             <polyline id="bzz03-2" data-name="bzz03 hideshowhome delayhome" class="home-6 bzz03 hideshowhome delayhome" points="509.86 88.3 678.64 380 509.86 674.23"/>
             <polyline id="bzz04-2" data-name="bzz04 hideshowhome delayhome" class="home-6 bzz04 hideshowhome delayhome" points="631.16 88.3 799.95 380 631.16 674.23"/>
             <polyline id="bzz05-2" data-name="bzz05 hideshowhome delayhome" class="home-6 bzz05 hideshowhome delayhome" points="697.77 88.3 866.56 380 697.77 674.23"/>
             <polyline id="bzz06" class="home-6 hideshowhome bzz06" points="749.12 88.3 917.91 380 749.12 674.23"/>
-          </g>
+          </g> -->
         </svg>
+        <img id="intro-logo" src="aartics_icon_v4.png"/>
+        <h1 id="intro-title">hello world, i'm aarti...</h1>
+        <p id="intro-para">I'm a designer and an engineer. 
+        <br>I'm bringing together my past experience in<br> 
+        architecture and software engineering to build new futures.</p>
+        <div class="logowrapper">
+          <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="img/github.png"/></a>
+          <a href="https://www.aartics.com" class="logoc"><img src="img/aartics_icon_v4.png"/></a>
+        </div>
     </div>
     <div class="horizon parent">
       <div class="child1">
@@ -349,7 +351,7 @@
       <clipPath id="clipPath_wolf_box">
           <polygon points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
       </clipPath>
-      <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/karuna.png" class="image" id="wpimg"/>
+      <image width="100" height="100" x="100" y="550" data-x-rel="-175" xlink:href="img/karunalogo.png" class="image" id="wpimg"/>
       <polygon id="_18" data-name="18" class="cls-2 project_box has_link" points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
       <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy csux"><a href="projects/karunavr">UX CASE STUDY:</a></text>
       <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/karunavr">karuna vr</a></text>
@@ -367,16 +369,13 @@
       <clipPath id="clipPath_sfac_box">
           <polygon points="1707.45 280.5 1592.55 280.5 1535.11 380 1592.55 479.5 1707.45 479.5 1764.89 380 1707.45 280.5"/>
       </clipPath>
-      <image width="330" height="210" x="1135" y="270" data-x-rel="-280" xlink:href="img/rtcs_icon_intro.png" class="image" id="sfac_intro"/>
+      <image width="330" height="110" x="1135" y="270" data-x-rel="-280" xlink:href="img/aartics_icon_v4.png" class="image" id="sfac_intro"/>
       <polygon id="_16" data-name="16" class="cls-2 project_box has_link" points="1707.45 280.5 1592.55 280.5 1535.11 380 1592.55 479.5 1707.45 479.5 1764.89 380 1707.45 280.5"/>
       <text x="1255" y="300" data-x-rel="-155" id="trsf6" class="casestudy csux"><a href="projects/aartics_story">UX CASE STUDY:</a></text>
       <text x="1280" y="460" data-x-rel="-160" id="trsf8" class="projectname"><a href="projects/aartics_story">aartics.com</a></text>                
   </g>
   <g id="ilikehuman" data-attach="#_20" class="attached">
     <polygon id="_20" data-name="20" class="cls-2" points="1855.5 380.51 1733.5 380.51 1672.5 486.17 1733.5 591.82 1855.5 591.82 1916.5 486.17 1855.5 380.51"/>
-<!--     <text x="2000" y="480" data-x-rel="-145" class="ilike">i &hearts;</text> -->
-<!--     <text x="2000" y="500" data-x-rel="-145" class="interest">designing</text> -->
-<!--     <text x="2000" y="520" data-x-rel="-145" class="interest">for humans</text> -->
   </g>
   <g id="mumbai_box" data-attach="#_30" class="attached">
       <polygon id="_30" data-name="30" class="cls-2 project_box_arch has_link" points="2139.72 381.5 1998.28 381.5 1927.55 504 1998.28 626.5 2139.72 626.5 2210.45 504 2139.72 381.5"/>
